--- a/Dockerfile-latest
+++ b/Dockerfile-latest
@@ -1,1 +1,44 @@
+# Build Stage
+FROM php:8.2-fpm-alpine AS build
+
+# Install build dependencies and PHP extensions
+RUN apk update && apk add --no-cache \
+    build-base \
+    libpng-dev \
+    libjpeg-turbo-dev \
+    libwebp-dev \
+    freetype-dev \
+    libzip-dev \
+    oniguruma-dev \
+    libxpm-dev \
+    curl zip unzip git bash fcgi \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp \
+    && docker-php-ext-install -j$(nproc) gd pdo pdo_mysql mbstring zip exif pcntl bcmath opcache
+
+# Install Composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+# Set permissions for Laravel directories
+RUN chown -R www-data:www-data /var/www
+
+# Runtime Stage
+FROM php:8.2-fpm-alpine AS runtime
+
+# Install runtime dependencies (no build tools)
+RUN apk --no-cache add \
+    libpng libjpeg-turbo libwebp freetype libzip libxpm curl git bash fcgi nodejs npm
+
+# Copy Composer binary from build stage
+COPY --from=build /usr/local/lib/php/extensions /usr/local/lib/php/extensions
+COPY --from=build /usr/local/etc/php/conf.d /usr/local/etc/php/conf.d
+COPY --from=build /usr/local/bin/composer /usr/local/bin/composer
+
+# Set permissions and switch to www-data user
+RUN chown -R www-data:www-data /var/www && chmod -R 755 /var/www
+
+USER www-data
+
+# Expose port 9000 and start php-fpm
+EXPOSE 9000
+CMD ["php-fpm"]
 
