--- a/Dockerfile-latest
+++ b/Dockerfile-latest
@@ -1,6 +1,9 @@
 # Build Stage
 FROM php:8.2-fpm-alpine AS build
 
+# Add non-root user
+RUN addgroup -S -g 2024 appgroup && adduser -S -u 2024 appuser -G appgroup
+
 # Install build dependencies and PHP extensions
 RUN apk update && apk add --no-cache \
     build-base \
@@ -33,10 +36,15 @@ COPY --from=build /usr/local/lib/php/extensions /usr/local/lib/php/extensions
 COPY --from=build /usr/local/etc/php/conf.d /usr/local/etc/php/conf.d
 COPY --from=build /usr/local/bin/composer /usr/local/bin/composer
 
-# Set permissions and switch to www-data user
-RUN chown -R www-data:www-data /var/www && chmod -R 755 /var/www
+# Copy user and group information from the builder stage
+COPY --from=build /etc/passwd /etc/passwd
+COPY --from=build /etc/group /etc/group
 
-USER www-data
+
+# Set permissions and switch to www-data user
+RUN chown -R appuser:appgroup /var/www && chmod -R 755 /var/www
+
+USER appuser
 
 # Expose port 9000 and start php-fpm
 EXPOSE 9000
