--- a/Dockerfile-latest
+++ b/Dockerfile-latest
@@ -1,8 +1,8 @@
 # Build Stage
 FROM php:8.2-fpm-alpine AS build
 
-# Add non-root user
-RUN addgroup -S -g 2024 appgroup && adduser -S -u 2024 appuser -G appgroup
+# Add non-root user with home directory
+RUN addgroup -S -g 2024 appgroup && adduser -S -u 2024 -G appgroup -h /home/appuser appuser
 
 # Install build dependencies and PHP extensions
 RUN apk update && apk add --no-cache \
@@ -31,7 +31,7 @@ FROM php:8.2-fpm-alpine AS runtime
 RUN apk --no-cache add \
     libpng libjpeg-turbo libwebp freetype libzip libxpm curl git bash fcgi nodejs npm
 
-# Copy Composer binary from build stage
+# Copy Composer binary and PHP extensions from build stage
 COPY --from=build /usr/local/lib/php/extensions /usr/local/lib/php/extensions
 COPY --from=build /usr/local/etc/php/conf.d /usr/local/etc/php/conf.d
 COPY --from=build /usr/local/bin/composer /usr/local/bin/composer
@@ -40,6 +40,8 @@ COPY --from=build /usr/local/bin/composer /usr/local/bin/composer
 COPY --from=build /etc/passwd /etc/passwd
 COPY --from=build /etc/group /etc/group
 
+# Create the home directory for appuser and set ownership
+RUN mkdir -p /home/appuser && chown -R appuser:appgroup /home/appuser
 
 # Set permissions and switch to appuser user
 RUN chown -R appuser:appgroup /var/www && chmod -R 755 /var/www
@@ -48,5 +50,5 @@ USER appuser
 
 # Expose port 9000 and start php-fpm
 EXPOSE 9000
-CMD ["php-fpm"]
 
+CMD ["php-fpm"]
